objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Interesting_Moments__c</fullName>
        <description>Used for SFMC tracking Interesting Moments</description>
        <label>Interesting Moments</label>
        <length>34000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Journey_Created_On__c</fullName>
        <description>This field will display the date of latest created journey which is related to lead.</description>
        <inlineHelpText>Contains the date of latest created journey related to this lead.</inlineHelpText>
        <label>Journey Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickbox_CampaignId__c</fullName>
        <description>This field value gets populated if the lead gets inserted using kickbox in KickboxProcessLeadsBatch class, we are taking this extra filed because we do not want extra SOQL on campaign member and do not want to update Journey to only update campaign field because it may result in Apex CPU Time Limit exception.</description>
        <label>Kickbox Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Engage_Email_Sent__c</fullName>
        <label>Last Engage Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_Name__c</fullName>
        <label>Last Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Lead_received_at__c</fullName>
        <label>Last Inbound Lead received at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Description__c</fullName>
        <description>Last Interesting Moment Description</description>
        <inlineHelpText>Last Interesting Moment Description</inlineHelpText>
        <label>Last Interesting Moment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Type__c</fullName>
        <description>Last Interesting Moment Type</description>
        <inlineHelpText>Last Interesting Moment Type</inlineHelpText>
        <label>Last Interesting Moment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Processing_Update__c</fullName>
        <label>Last Lead Processing Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource_Sub_Type__c</fullName>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Stage__c</fullName>
        <inlineHelpText>This field will keep track of Lead/Journey Hold Back</inlineHelpText>
        <label>Lead Assignment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Hold queue</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Assignments Run</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <label>Bypass Hold Back</label>
                </value>
                <value>
                    <fullName>Lead Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Adj__c</fullName>
        <description>Captures the Lead Demographics Score Adj</description>
        <inlineHelpText>Captures the Lead Demographics Score Adj</inlineHelpText>
        <label>Lead Demographic Score Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_DateTime__c</fullName>
        <description>Capture the time stamp when the demographic score updated on the lead</description>
        <inlineHelpText>Capture the time stamp when the demographic score updated on the lead</inlineHelpText>
        <label>Lead Demographic Score DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Re_calculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To capture the flag to re calculate the lead score based on the demographics</description>
        <inlineHelpText>To capture the flag to re calculate the lead score based on the demographics</inlineHelpText>
        <label>Lead Demographic Score Re-calculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Total__c</fullName>
        <description>Captures the total of the Lead Score</description>
        <formula>(Lead_Demographic_Score__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the total of the Lead Score</inlineHelpText>
        <label>Lead Demographic Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score__c</fullName>
        <description>To capture the demographic score of the lead</description>
        <inlineHelpText>To capture the demographic score of the lead</inlineHelpText>
        <label>Lead Demographic Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the HQ Market for this lead found according to lead unomy OR billing street,city,country.</description>
        <inlineHelpText>This field stores the nearest HQ Market according to unomy OR billing street,city,state,country.</inlineHelpText>
        <label>HQ Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Processing_Stage__c</fullName>
        <description>This field identify the State of the lead.
1 : Ready For Unomy Enrichment
2 : Ready For Market Identification
3 : Ready For Lead Assignment
4 : Assignment Complete
5 : Ready For Behavioral Scored</description>
        <formula>IF((CreatedDate+(3/24/60))&gt;=NOW() &amp;&amp; ISBLANK(Unomy_Updated_DateTime__c), 
'1', 
IF(ISBLANK(Unomy_Updated_DateTime__c) || (NOT(ISBLANK(Unomy_Updated_DateTime__c)) &amp;&amp; (CreatedDate+(3/24/60)) &lt; Unomy_Updated_DateTime__c), 
IF((CreatedDate+(6/24/60))&gt;=NOW() &amp;&amp; ISBLANK(Lead_Market__c) &amp;&amp; (((ISPICKVAL(Processing_Stage__c, 'Demographic Scored') &amp;&amp; (Last_Lead_Processing_Update__c + (3/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Created') &amp;&amp; (Last_Lead_Processing_Update__c + (6/24/60)) &gt;= NOW())) &amp;&amp; NOT(ISPICKVAL(Processing_Stage__c, 'Market Identified') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Assignment Complete') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Behavioural Scored'))), 
'2', 
IF((CreatedDate + (9/24/60)) &gt;= NOW() &amp;&amp; (((ISPICKVAL(Processing_Stage__c, 'Created') &amp;&amp; (Last_Lead_Processing_Update__c + (9/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Demographic Scored') &amp;&amp; (Last_Lead_Processing_Update__c + (6/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Market Identified') &amp;&amp; (Last_Lead_Processing_Update__c + (3/24/60)) &gt;= NOW())) &amp;&amp; NOT(ISPICKVAL(Processing_Stage__c, 'Assignment Complete') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Behavioural Scored'))), 
'3', 
'5')), 
IF((Unomy_Updated_DateTime__c+(3/24/60))&gt;=NOW() &amp;&amp; ISBLANK(Lead_Market__c) &amp;&amp; (((ISPICKVAL(Processing_Stage__c, 'Demographic Scored') &amp;&amp; (Last_Lead_Processing_Update__c + (3/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Created') &amp;&amp; (Last_Lead_Processing_Update__c + (6/24/60)) &gt;= NOW())) &amp;&amp; NOT(ISPICKVAL(Processing_Stage__c, 'Market Identified') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Assignment Complete') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Behavioural Scored'))), 
'2', 
IF((Unomy_Updated_DateTime__c + (6/24/60)) &gt;= NOW() &amp;&amp; (((ISPICKVAL(Processing_Stage__c, 'Enriched') &amp;&amp; (Last_Lead_Processing_Update__c + (9/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Demographic Scored') &amp;&amp; (Last_Lead_Processing_Update__c + (6/24/60)) &gt;= NOW()) || (ISPICKVAL(Processing_Stage__c, 'Market Identified') &amp;&amp; (Last_Lead_Processing_Update__c + (3/24/60)) &gt;= NOW())) &amp;&amp; NOT(ISPICKVAL(Processing_Stage__c, 'Assignment Complete') &amp;&amp; ISPICKVAL(Processing_Stage__c, 'Behavioural Scored'))), 
'3', 
'5'))))</formula>
        <inlineHelpText>This field identify the State of the lead.
1 : Ready For Unomy Enrichment
2 : Ready For Market Identification
3 : Ready For Lead Assignment
4 : Assignment Complete
5 : Ready For Behavioral Scored</inlineHelpText>
        <label>Lead Processing Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Marketing_Email_Opens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Marketing Email Opens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration__c</fullName>
        <description>If at lead stage or tour outcome point, we gather direct information about the lease (rent) term of the potential member, this field is filled manually</description>
        <label>Lease Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Locale of the Lead if captured.</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Phone_Number__c</fullName>
        <formula>IF(
  OR( 
    INCLUDES( Locations_Interested__c , "LON-Aldgate Tower"), 
    INCLUDES( Locations_Interested__c , "LON-Devonshire"), 
    INCLUDES( Locations_Interested__c , "LON-East London"), 
    INCLUDES( Locations_Interested__c , "LON-Labs"), 
    INCLUDES( Locations_Interested__c , "LON-Moorgate"), 
    INCLUDES( Locations_Interested__c , "LON-Soho London"), 
    INCLUDES( Locations_Interested__c , "LON-South Bank"), 
    INCLUDES( Locations_Interested__c , "LON-Spitalfields") 
  ),
  '02036954926',
  '855.593.9675'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locations_Interested__c</fullName>
        <label>Locations Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Labs</fullName>
                </value>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARC-Ing. Enrique Butty 275</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARG- Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATL-Colony Square</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-Labs</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>AUS-West 6th</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Diagonal 444</fullName>
                </value>
                <value>
                    <fullName>BEV-Gav-Yam Negev</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Heights</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Montague St</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Looking_for_Office_Space__c</fullName>
        <description>For Facebook page we have this field</description>
        <label>Looking for Office Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Identified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the user information who updated the market on this lead. Created for ST-3198</description>
        <inlineHelpText>This field stores the user who updated the market on this lead</inlineHelpText>
        <label>HQ Market Identified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Identified_On__c</fullName>
        <description>This field store the date and time when HQ market is updated on Lead. Created for ST-3198.</description>
        <inlineHelpText>Store the date and time when HQ market is updated on lead.</inlineHelpText>
        <label>HQ Market Identified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_Interested_In__c</fullName>
        <description>This field indicates the Markets, Lead is interested in.</description>
        <label>Markets Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Markets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markets_Interested__c</fullName>
        <label>Markets Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Desks__c</fullName>
        <description>RIGHT(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""), 
FIND("-", TRIM(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", "")))+1)</description>
        <formula>IF( 
FIND("+",
SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))&lt;&gt; 0,

VALUE( TRIM(LEFT(
SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""),FIND("+",
SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))-1)))
,

VALUE(TRIM(RIGHT(TRIM(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", "")), 
(LEN(TRIM(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))))-(FIND("-", TRIM(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", "")))))))

)</formula>
        <label>Max. Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <label>Member Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good Fit</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Ok Fit</fullName>
                    <default>true</default>
                    <label>Ok Fit</label>
                </value>
                <value>
                    <fullName>Not Good Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Redeem_Benefit__c</fullName>
        <label>Member Redeem Benefit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotional Code Featured on Benefits Page</fullName>
                </value>
                <value>
                    <fullName>Link to Custom Landing Page/URL</fullName>
                </value>
                <value>
                    <fullName>In-Person by Displaying the WeWork App or Keycard</fullName>
                </value>
                <value>
                    <fullName>Email Address Outreach (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact</description>
        <inlineHelpText>Select the WeWork member that referred this lead</inlineHelpText>
        <label>Member Referral</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Min_Desks__c</fullName>
        <formula>IF( 
FIND("+", 
SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))&lt;&gt; 0, 
 
VALUE(TRIM(LEFT(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""),FIND("+",SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))-1))) , 
IF( 
FIND("-",SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))&lt;&gt; 0, 
VALUE(TRIM(LEFT(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""),FIND("-",SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))-1))) , 
IF(FIND("desk",LOWER(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", "")))&lt;&gt;0, 
VALUE(TRIM(LEFT(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""),FIND("desk",LOWER(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", "")))-1))), 
VALUE(TRIM(SUBSTITUTE( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER( SUBSTITUTE( LOWER(Interested_in_Number_of_Desks_Range__c), "desks", "")), "desk", "")),"peoples","")),"people",""), "_", ""))) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min. Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Number_of_Desks__c</fullName>
        <formula>IF( 
FIND("+",SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""))&lt;&gt; 0, 
VALUE(TRIM(LEFT(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""),FIND("+",SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""))-1))) , 
IF( 
FIND("-",SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""))&lt;&gt; 0, 
VALUE(TRIM(LEFT(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""),FIND("-",SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""))-1))) , 
IF(FIND("desk",LOWER(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", "")))&lt;&gt;0, 
VALUE(TRIM(LEFT(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""),FIND("desk",LOWER(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", "")))-1))), 
VALUE(TRIM(SUBSTITUTE(TEXT(Number_of_Desks_2016__c), "_", ""))) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min. Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mixpanel_id__c</fullName>
        <description>used for mixpanel requested by Ahmed</description>
        <label>Mixpanel id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Move_In_Time_Frame__c</fullName>
        <description>This field will use to store if tour book from building page of the site.</description>
        <label>Move In Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NextMonth</fullName>
                    <label>Next Month</label>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
                <value>
                    <fullName>This Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>